crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badVariants2.usda
version https://git-lfs.github.com/spec/v1
oid sha256:22746f06d9a97891089272a50b338b343df7fe33248ff3a501810d673c54ca4f
size 1346
